feat(roles|permissions): add modules for roles and permissions
